--- a/js/manifest.json
+++ b/js/manifest.json
@@ -28,6 +28,10 @@
 		"sizes": "192x192",
 		"type": "image/png"
 	}, {
+		"src": "../img/icons/icon_256.png",
+		"sizes": "256x256",
+		"type": "image/png"
+	}, {
 		"src": "../img/icons/icon_512.png",
 		"sizes": "512x512",
 		"type": "image/png"
